css/sitewide.css
@import url('fonts.css');
html {
  font-size: 18px;
  font-family: 'Source Serif Pro', serif;
}
body {
  margin: 0;
  line-height: 1.25;
}
::selection {
  background: rgb(15, 115, 155);
  color: white;
}

a {
  color: rgb(1, 102, 202);
  text-decoration: none;
  border-bottom: 2px solid rgb(1, 102, 202);
  outline-offset: 6px;
  background: white;
}
a:focus {
  transition: outline-offset 0.25s;
  outline: 3px solid black;
  outline-offset: 2px;
  border: 2px solid white;
  background: white;
}

.contained {
  padding: 0 1rem;
  max-width: 64rem;
  margin: 0 auto;
}

main {
  padding: 0 1rem;
}

footer {
  padding: 4rem 1rem;
  margin-top: 6rem;
  opacity: 0.8;
  background: rgba(255, 255, 255, 0.75)
}

.section {
  margin-bottom: 3rem;
}


h1, h2, h3, h4, h5 {
  margin: 0;
}

h1, h2 {
  font-family: 'DM Serif Display', serif;
}

h3 {
  font-weight: 700;
}
ul {
  padding: 0 0 0 2rem;
}
li {
  position: relative;
  margin-top: 1rem;
}
p {
  margin: 0.5rem 0;
}

/* Source: A11y project */
.visually-hidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
  white-space: nowrap; /* added line */
}

article {
  line-height: 1.75;
}

article li {
  margin: 0.25rem 0;
}

article ul {
  margin: 0;
}

article p {
  margin-top: 1.5rem;
}


li .image-text {
  padding: 1rem 0 0 0;
  margin-bottom: 3rem;
}

li:nth-last-child(1) .image-text {
  margin-bottom: 0;
}

li.image-li img {
  border: 1px dashed rgba(206, 76, 98, 0.8);
  width: 100%;
  height: auto;
}

